--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "concurrently npm:build:*",
     "build:ui": "vite build --watch=false --config vite.config.ui.ts",
     "build:plugin": "vite build --watch=false --config vite.config.plugin.ts",
-    "watch:ui": "vite build --config vite.config.ui.ts",
+    "watch:ui": "set NODE_ENV=development&& vite build --config vite.config.ui.ts",
     "watch:plugin": "vite build --config vite.config.plugin.ts"
   },
   "devDependencies": {
