--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "extends": "@tsconfig/svelte/tsconfig.json",
   "compilerOptions": {
-    "target": "ES6",
+    "target": "ESNext",
     "useDefineForClassFields": true,
-    "module": "ES6",
+    "module": "ESNext",
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": {
