--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,9 @@
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "$lib": ["./src/shared/lib"],
+      "$lib/*": ["./src/shared/lib/*"]
     },
 
     "allowJs": true,
@@ -16,7 +18,7 @@
     "allowSyntheticDefaultImports": true,
     "typeRoots": ["./node_modules/@types", "./node_modules/@figma"],
     "outDir":"dist/",
-    "sourceMap": false,
+    "sourceMap": false
   },
   "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.svelte"],
   "references": [{ "path": "./tsconfig.node.json" }]
